hphp/test/zend/bad/ext-spl/SplObjectStorage_unserialize_invalid_parameter3.php
<?php

$s = new SplObjectStorage();

try {
    $s->unserialize(NULL);
} catch(UnexpectedValueException $e) {
    echo $e->getMessage();
}

?>